--- a/help.html
+++ b/help.html
@@ -145,7 +145,7 @@
 							<div class="donat-tabs__body tab">
 								<div class="tab__card">
 									<div class="tab__card-sum">
-										<button type="button" class="tab__mono-btn btn"><a href="#" data-lang="home_page-51">Mono банка</a><span class="_icon-arrowicon"></span></button>
+										<button type="button" class="tab__mono-btn btn"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51">Mono банка</a><span class="_icon-arrowicon"></span></button>
 									</div>
 									<form class="tab__card-mail">
 										<label for="input-email" class="tab__card-label">Email*</label>
