--- a/index.html
+++ b/index.html
@@ -200,7 +200,17 @@
 								<div class="progress__slide swiper-slide">
 									<img src="img/slider3.webp" alt="car">
 								</div>
-							</div>						
+							</div>	
+							<div class="progress__card">
+								<div class="progress__slide swiper-slide">
+									<img src="img/slide_4.webp" alt="car">
+								</div>
+							</div>
+							<div class="progress__card">
+								<div class="progress__slide swiper-slide">
+									<img src="img/slide_5.webp" alt="car">
+								</div>
+							</div>										
 					</div> 
 				</div>
 			</section>
