--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
 								<p class="items-item__text" data-lang="home_page-35">Ти можеш підтримати нашу ініціативу своїм донатом. Це може бути як одноразовий внесок, так і підписка на щомісячний донат. </p>
 								<p class="items-item__text" data-lang="home_page-36">Давай наближувати перемогу разом!</p>
 							</div>
-							<button type="button" class="items-item-btn" name="donat"><a href="index.html#donat" data-lang="home_page-37">Зробити внесок</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="items-item-btn" name="donat"><a href="index.html#donat" data-lang="home_page-37">Зробити внесок </a><span class="items-item-arrow _icon-arrowicon"></span></button>
 						</div>
 						<div class="join__items-item items-item">
 							<div class="items-item__number">02</div>
 							<p class="items-item__text" data-lang="home_page-38">Для нас буде великою цінністю, якщо ти будеш ділитися із друзями та знайомими нашою ініціативою.
 								Це буде твоїм дуже вагомим внеском у досягнення нашої спільної мети!</p>
-							<button type="button" class="items-item-btn" name="donat"><a href="#" data-lang="home_page-39">Поділитись сайтом</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="items-item-btn" name="donat"><a href="#" data-lang="home_page-39">Поділитись сайтом</a><span class="items-item-arrow _icon-arrowicon"></span></button>
 						</div>
 						<div class="join__items-item items-item">
 							<div class="items-item__number">03</div>
 							<p class="items-item__text" data-lang="home_page-40">Ви можете подати запит на авто для військової частини в містах. Для цього необхідно перейти за посиланням та заповнити форму зворотнього зв’язку.</p>
-							<button type="button" class="items-item-btn" name="donat"><a href="index.html#contact-form" data-lang="home_page-41">Запит на авто</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="items-item-btn" name="donat"><a href="index.html#contact-form" data-lang="home_page-41">Запит на авто</a><span class="items-item-arrow _icon-arrowicon"></span></button>
 						</div>
 					</div>
 				</div>
