--- a/help.html
+++ b/help.html
@@ -94,12 +94,14 @@
 			<section class="donat">
 				<div class="donat__box">
 					<div data-tabs class="donat-tabs" id="donat">
-						<nav data-tabs-titles class="donat-tabs__navigation">
+						<div class="donat__grid">
+							<nav data-tabs-titles class="donat-tabs__navigation">
 							<button type="button" class="donat-tabs__title _tab-active" data-lang="home_page-43">Переказ карткою</button>
 							<button type="button" class="donat-tabs__title" data-lang="home_page-44">Mono банка</button>
 							<button type="button" class="donat-tabs__title" data-lang="home_page-45">Реквізити</button>
-						</nav>
-						<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
+							</nav>
+							<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
+						</div>
 						<div data-tabs-body class="donat-tabs__content">
 							<div class="donat-tabs__body tab">
 								<div class="tab__card">
