--- a/partners.html
+++ b/partners.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
@@ -19,7 +19,7 @@
 			<div class="header-page__box">
 				<div class="header__logo">
 					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
-					<div class="header__logo-text">Волонтерський Рух України</div>
+					<div class="header__logo-text" data-lang="home_page-logo">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
 					<li class="header__nav-item"><a href="index.html#donat" data-lang="help_page-17">Підтримати</a></li>
@@ -45,7 +45,7 @@
 									<span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-2">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://hyundai-dnipro.com/" data-lang="partners_page-2" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-3">Дніпро, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-4">Запорізьке шосе, 59</p>
@@ -57,7 +57,7 @@
 									<p class="partner__item-renault">Renault</p> <span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-5">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://renault.kr.ua" data-lang="partners_page-5" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-6">Кропивницький, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-7">вул. Вокзальна, 60-А</p>
@@ -69,7 +69,7 @@
 									<p class="partner__item-renault">Renault</p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-8">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://renault.ck.ua" data-lang="partners_page-8" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-9">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-10">вул. 30 років Перемоги, 7/2</p>
@@ -81,7 +81,7 @@
 									<p class="partner__item-nissan">Nissan</p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-11">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://nissan.kr.ua" data-lang="partners_page-11" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-12">Кропивницький, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-13">пр-т Винниченка, 2</p>
@@ -93,7 +93,7 @@
 									<p class="partner__item-nissan">Nissan</p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-14">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://nissan.ck.ua" data-lang="partners_page-14" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-15">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-16">вул. 30 років Перемоги, 7/2</p>
@@ -105,7 +105,7 @@
 									<p class="partner__item-ford">Ford</p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-17">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://ford.kr.ua" data-lang="partners_page-17" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-18">Кропивницький, Україна </p>
 										<p class="partner__item-street" data-lang="partners_page-19">пр-т Винниченка, 2</p>
@@ -117,7 +117,7 @@
 									<p class="partner__item-skoda">Skoda</p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
-									<div class="partner__item-work"><a href="#" data-lang="partners_page-20">Посилання на сайт</a></div>
+									<div class="partner__item-work"><a href="https://skoda.ck.ua" data-lang="partners_page-20" target="_blank">Посилання на сайт</a></div>
 									<div>
 										<p class="partner__item-place" data-lang="partners_page-21">Черкаси, Україна</p>
 										<p class="partner__item-street" data-lang="partners_page-22">вул. Чигиринська, 60/2</p>
@@ -267,6 +267,7 @@
 				</form>
 			</section>
 		</main>
+
 		<footer class="footer">
 			<div class="footer__box">
 				<div class="footer__form" id="report">
@@ -279,12 +280,10 @@
 				<div class="footer__content">
 					<div class="footer__logo">
 						<div class="footer__logo-img"><a href="index.html"><picture><source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png" alt="логотип Волонтерський Рух України"></picture></a></div>
-						<div class="footer__logo-text">Волонтерський Рух України</div>
+						<div class="footer__logo-text" data-lang="footer_page-logo">Волонтерський Рух України</div>
 					</div>
 					<div class="footer__lists">
 						<ul class="footer__list">
-							<li class="footer__list-item"><a data-lang="home_page-61" href="index.html#report">Звітність</a></li>
-							<li class="footer__list-item"><a data-lang="home_page-62" href="index.html#subs">Підписка</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-63" href="partners.html">Партнери</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-64" href="vacancy.html">Вакансії</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-65" href="help.html">Часті запитання</a> </li>
