--- a/vacancy.html
+++ b/vacancy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
 	<title data-lang="vacancy_page-title">Волонтерський Рух України</title>
@@ -20,7 +20,7 @@
 			<div class="header-page__box">
 				<div class="header__logo">
 					<div class="header__logo-img"><a href="index.html"><img src="img/logo.png" alt="Волонтерський Рух України"></a></div>
-					<div class="header__logo-text">Волонтерський Рух України</div>
+					<div class="header__logo-text" data-lang="home_page-logo">Волонтерський Рух України</div>
 				</div>
 				<ul class="header__nav">
 					<li class="header__nav-item"><a href="index.html#donat" data-lang="help_page-17">Підтримати</a></li>
@@ -215,12 +215,10 @@
 				<div class="footer__content">
 					<div class="footer__logo">
 						<div class="footer__logo-img"><a href="index.html"><picture><source srcset="img/logo1.webp" type="image/webp"><img src="img/logo1.png" alt="логотип Волонтерський Рух України"></picture></a></div>
-						<div class="footer__logo-text">Волонтерський Рух України</div>
+						<div class="footer__logo-text" data-lang="footer_page-logo" data-lang="home_page-logo">Волонтерський Рух України</div>
 					</div>
 					<div class="footer__lists">
 						<ul class="footer__list">
-							<li class="footer__list-item"><a data-lang="home_page-61" href="index.html#report">Звітність</a></li>
-							<li class="footer__list-item"><a data-lang="home_page-62" href="index.html#subs">Підписка</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-63" href="partners.html">Партнери</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-64" href="vacancy.html">Вакансії</a></li>
 							<li class="footer__list-item"><a data-lang="home_page-65" href="help.html">Часті запитання</a> </li>
