--- a/partners.html
+++ b/partners.html
@@ -142,9 +142,10 @@
 							</div>
 							<p class="card-mail-text" data-lang="home_page-48">Ви будете отримувати звітності на email по вашому внеску</p>
 						</form>
-						<button type="button" class="tab__card-btn btn" name="card pay"><a href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43" target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
-						<button type="button" class="tab__mono-btn btn" name="mono банка"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono банка</a><span class="_icon-arrowicon"></span></button>
-						
+						<div class="donat__btns">
+							<button type="button" class="tab__card-btn btn" name="card pay"><a href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43" target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
+							<button type="button" class="tab__mono-btn btn" name="mono банка"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono банка</a><span class="_icon-arrowicon"></span></button>
+						</div>
 						<div class="tab__card invoice">
 							<div class="invoice-title" data-lang="home_page-54">Реквізити в Україні</div>
 							<ul class="invoice-list list">
