--- a/partners.html
+++ b/partners.html
@@ -41,7 +41,7 @@
 						<div class="partner__items">
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-hyundai">Hyundai</p>
+									<p class="partner__item-hyundai"><a href="https://hyundai-dnipro.com/" target="_blank">Hyundai</a></p>
 									<span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
@@ -54,7 +54,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-renault">Renault</p> <span class="_icon-arrowicon"></span>
+									<p class="partner__item-renault"><a href="https://renault.kr.ua" target="_blank">Renault</a></p> <span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://renault.kr.ua" data-lang="partners_page-5" target="_blank">Посилання на сайт</a></div>
@@ -66,7 +66,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-renault">Renault</p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-renault"><a href="https://renault.ck.ua" target="_blank">Renault</a></p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://renault.ck.ua" data-lang="partners_page-8" target="_blank">Посилання на сайт</a></div>
@@ -78,7 +78,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-nissan">Nissan</p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-nissan"><a href="https://nissan.kr.ua" target="_blank">Nissan</a></p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://nissan.kr.ua" data-lang="partners_page-11" target="_blank">Посилання на сайт</a></div>
@@ -90,7 +90,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-nissan">Nissan</p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-nissan"><a href="https://nissan.ck.ua" target="_blank">Nissan</a></p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://nissan.ck.ua" data-lang="partners_page-14" target="_blank">Посилання на сайт</a></div>
@@ -102,7 +102,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-ford">Ford</p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-ford"><a href="https://ford.kr.ua" target="_blank">Ford</a></p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://ford.kr.ua" data-lang="partners_page-17" target="_blank">Посилання на сайт</a></div>
@@ -114,7 +114,7 @@
 							</div>
 							<div class="partner__items-item vacancy__item">
 								<div class="partner__item-title">
-									<p class="partner__item-skoda">Skoda</p><span class="_icon-arrowicon"></span>
+									<p class="partner__item-skoda"><a href="https://skoda.ck.ua" target="_blank">Skoda</a></p><span class="_icon-arrowicon"></span>
 								</div>
 								<div class="partner__item-info">
 									<div class="partner__item-work"><a href="https://skoda.ck.ua" data-lang="partners_page-20" target="_blank">Посилання на сайт</a></div>
