--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							<div class="items-item__number">02</div>
 							<p class="items-item__text" data-lang="home_page-38">Для нас буде великою цінністю, якщо ти будеш ділитися із друзями та знайомими нашою ініціативою.
 								Це буде твоїм дуже вагомим внеском у досягнення нашої спільної мети!</p>
-							<button type="button" class="items-item-btn" name="donat"><a href="#" data-lang="home_page-39">Поділитись сайтом</a><span class="items-item-arrow _icon-arrowicon"></span></button>
+							<button type="button" class="items-item-btn" name="donat"><a href="#" data-lang="home_page-39" data-modalsocial>Поділитись сайтом</a><span class="items-item-arrow _icon-arrowicon"></span></button>
 						</div>
 						<div class="join__items-item items-item">
 							<div class="items-item__number">03</div>
@@ -221,7 +221,7 @@
 	<section class="donat">
 		<div class="donat__box">
 			<h3 class="donat-title title" data-lang="home_page-46">Підтримати збір на авто для ЗСУ</h3>
-			<div class="donat__content">
+			<div class="donat__content" id="donat">
 				<div class="donat__btns">
 					<button type="button" class="tab__card-btn btn" name="card pay"><a href="https://payhub.com.ua/#/payment/movement-of-ukraine" data-lang="home_page-43" target="_blank">Переказ карткою</a><span class="_icon-arrowicon"></span></button>
 					<button type="button" class="tab__mono-btn btn" name="mono банка"><a href="https://send.monobank.ua/jar/6asNjXLZXx" data-lang="home_page-51" target="_blank">Mono банка</a><span class="_icon-arrowicon"></span></button>
@@ -319,8 +319,7 @@
 
 	<div class="modal">
 		<div class="modal__wrapper">
-			<button data-close type="button" class="modal__close">&times;</button>
-			<!---<div data-close class="modal__close">&times;</div>--->
+			<button data-close type="button" class="modal__close">&times;</button>			
 			<div class="modal__text">
 				<p data-lang="home_page-68">Дякуємо, що залишили запит на нашому сайті. Очікуйте, найближчим часом з вами зв’яжуться.</p>
 				<p data-lang="home_page-69">Все буде Україна!</p>
@@ -328,6 +327,26 @@
 			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
+
+	<div class="modalsocial">
+		<div class="modal__wrapper wrapper-social">
+			<button data-closesocial type="button" class="modal__close-social">&times;</button>
+			<h3 class="modalsocial__title">Поділись сайтом та поширюй збір коштів на авто для ЗСУ!</h3>
+			<p class="modalsocial__link">Копіювати посилання на сайт</p>
+			<div class="modal__social">
+				<h4 class="modal__social-title">Поділитись у соціальних мережах</h4>
+				<div class="modal__social-items">
+					<a href="https://facebook.com" target="_blank"><img src="img/Facebook.webp" alt="facebook"></a>
+					<a href="https://www.instagram.com/" target="_blank" ><img src="img/Instagram.webp" alt="instagram"></a>
+					<a href="https://www.whatsapp.com" target="_blank" ><img src="img/whatsapp.webp" alt="whatsapp"></a>
+					<a href="https://www.linkedin.com" target="_blank" ><img src="img/linkedIn.webp" alt="linkedIn"></a>
+					<a href="https://twitter.com" target="_blank"><img src="img/twitter.webp" alt="twitter"></a>
+					<a href="https://web.telegram.org/" target="_blank" ><img src="img/telegram.webp" alt="telegram"></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	
 	<script src="js/app.js"></script>
