--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
 
 			<section class="help">
 				<div class="help__box">
-					<button type="button" class="help__btn"><a href="index.html"><span class="_icon-arrow-left"></span></a></button>
+					<button type="button" class="help__btn" onclick="window.history.back()"><span class="_icon-arrow-left"></span></button>
 					<div class="help__content">
 						<div class="help__title title" data-lang="help_page-1">Часті запитання</div>
 						<div data-spollers class="help__items spollers">
