--- a/index.html
+++ b/index.html
@@ -331,12 +331,12 @@
 	<div class="modalsocial">
 		<div class="modal__wrapper wrapper-social">
 			<button data-closesocial type="button" class="modal__close-social">&times;</button>
-			<h3 class="modalsocial__title">Поділись сайтом та поширюй збір коштів на авто для ЗСУ!</h3>
-			<p class="modalsocial__link">Копіювати посилання на сайт</p>
+			<h3 class="modalsocial__title" data-lang="home_page-71">Поділись сайтом та поширюй збір коштів на авто для ЗСУ!</h3>
+			<p class="modalsocial__link" data-lang="home_page-72">Копіювати посилання на сайт</p>
 			<div class="modal__social">
-				<h4 class="modal__social-title">Поділитись у соціальних мережах</h4>
+				<h4 class="modal__social-title" data-lang="home_page-73">Поділитись у соціальних мережах</h4>
 				<div class="modal__social-items">
-					<a href="https://facebook.com" target="_blank"><img src="img/Facebook.webp" alt="facebook"></a>
+					<a href="https://facebook.com" target="_blank" id="social-icon"><img src="img/Facebook.webp" alt="facebook"></a>
 					<a href="https://www.instagram.com/" target="_blank" ><img src="img/Instagram.webp" alt="instagram"></a>
 					<a href="https://www.whatsapp.com" target="_blank" ><img src="img/whatsapp.webp" alt="whatsapp"></a>
 					<a href="https://www.linkedin.com" target="_blank" ><img src="img/linkedIn.webp" alt="linkedIn"></a>
@@ -350,7 +350,7 @@
 
 	
 	<script src="js/app.js"></script>
-	<script src="js/slider.min.js"></script>
+	<script src="js/home.js"></script>
 
 </body>
 </html>
