--- a/partners.html
+++ b/partners.html
@@ -35,7 +35,7 @@
 
 			<section class="partner">
 				<div class="partner__box">
-					<button type="button" class="partner__btn" name="partner"><a href="index.html"><span class="_icon-arrow-left"></span></a></span></button>
+					<button type="button" class="partner__btn" name="partner" onclick="window.history.back()"><span class="_icon-arrow-left"></span></span></button>
 					<div class="partner__content">
 						<div class="partner__title title" data-lang="partners_page-1">Наші партнери</div>
 						<div class="partner__items">
