--- a/vacancy.html
+++ b/vacancy.html
@@ -35,7 +35,7 @@
 		<main class="page">
 			<section class="vacancy">
 				<div class="vacancy__box" id="donat">
-					<button type="button" class="vacancy__btn"><a href="index.html"><span class="_icon-arrow-left"></a></button>
+					<button type="button" class="vacancy__btn" onclick="window.history.back()"><span class="_icon-arrow-left"></button>
 					<div class="vacancy__content">
 						<div class="vacancy__title title" data-lang="vacancy_page-1">Вакансії</div>
 						<div class="vacancy__items">
