--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<div class="partners__list-item item-list">
 							<div>
 								<div class="item-list-subtitle" data-lang="home_page-20">Офіційний сервіс</div>
-								<div class="item-list-title">Skoda</div>
+								<div class="item-list-title">Ford</div>
 							</div>
 							<div>
 								<div class="item-list-place" data-lang="home_page-21">Кропивницький, Україна</div>
