--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
 	<section class="contact-form">
-		<form class="contact-form__box js-form" id="contact-form" action="" novalidate>
+		<form class="contact-form__box js-form" id="contact-form" action="#" novalidate>
 			<div class="contact-form__title" data-lang="home_page-56">Заповнюйте форму і ми з вами зв’яжемось</div>
 			<div class="contact-form__content">
 				<div class="contact-form__item contact-item form__group">
