--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
 	<section class="contact-form">
-		<form class="contact-form__box js-form" id="contact-form" action="#" novalidate>
+		<form class="contact-form__box js-form" id="contact-form" action="sendmail/sendmail.php" method="POST" enctype="multipart/form-data">
 			<div class="contact-form__title" data-lang="home_page-56">Заповнюйте форму і ми з вами зв’яжемось</div>
 			<div class="contact-form__content">
 				<div class="contact-form__item contact-item form__group">
@@ -317,7 +317,7 @@
 	</footer>
 	</div>
 
-	<div class="modal">
+	<div class="modal hide">
 		<div class="modal__wrapper">
 			<button data-close type="button" class="modal__close">&times;</button>			
 			<div class="modal__text">
