--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 	</footer>
 	</div>
 
-	<div class="modal hide">
+	<div class="modal">
 		<div class="modal__wrapper">
 			<button data-close type="button" class="modal__close">&times;</button>			
 			<div class="modal__text">
