--- a/partners.html
+++ b/partners.html
@@ -181,7 +181,7 @@
 
 
 			<section class="contact-form">
-				<form class="contact-form__box js-form" id="contact-form" action="sendmail/sendmail.php" method="POST" enctype="multipart/form-data">
+				<form class="contact-form__box js-form" id="contact-form" action="" novalidate>
 					<div class="contact-form__title" data-lang="home_page-56">Заповнюйте форму і ми з вами зв’яжемось</div>
 					<div class="contact-form__content">
 						<div class="contact-form__item contact-item form__group">
