--- a/partners.html
+++ b/partners.html
@@ -5,7 +5,7 @@
 	<title data-lang="home_page-title">Волонтерський Рух України</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="img/logo.ico">
 	<meta name="Волонтерський Рух України" content="Ми – Волонтерський Рух України, займаємося закупівлею позашляховиків та мінібусів.">
 	<meta name="description" content="Ми – Волонтерський Рух України, у нас відкрито збір на авто для ЗСУ. Приєднуйтесь!">
