--- a/help.html
+++ b/help.html
@@ -178,7 +178,7 @@
 						</ul>
 						<ul class="footer__list">
 							<li class="footer__list-info" data-lang="home_page-66">Інформаційна лінія</li>
-							<li class="footer__list-tel">+38 067 577 77 77</li>
+							<li class="footer__list-tel"><a href=”tel:+380675507775>+380 67 550 77 75</a></li>
 						</ul>
 					</div>
 					<div class="footer__btns btn">
@@ -206,7 +206,7 @@
 			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
-	<script src="js/app.js"></script>
+	<script src="js/app.min.js"></script>
 
 </body>
 
