--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 					</ul>
 					<ul class="footer__list">
 						<li class="footer__list-info" data-lang="home_page-66">Інформаційна лінія</li>
-						<li class="footer__list-tel">+38 067 577 77 77</li>
+						<li class="footer__list-tel"><a href=”tel:+380675507775>+380 67 550 77 75</a></li>
 					</ul>
 				</div>
 				<div class="footer__btns btn">
@@ -349,7 +349,7 @@
 
 
 	
-	<script src="js/app.js"></script>
+	<script src="js/app.min.js"></script>
 	<script src="js/home.js"></script>
 
 </body>
