--- a/help.html
+++ b/help.html
@@ -206,7 +206,7 @@
 			<button data-close type="button" class="modal__btn btn-blue"><a href="index.html#donat" data-lang="home_page-70">Підтримати збір</a><span class="_icon-arrowicon"></span></button>
 		</div>
 	</div>
-	<script src="js/app.min.js"></script>
+	<script src="js/app.js"></script>
 
 </body>
 
