--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
 
 	
-	<script src="js/app.min.js"></script>
+	<script src="js/app.js"></script>
 	<script src="js/home.js"></script>
 
 </body>
